updated to the latest version db-derby-10.17.1.0-src.zip from https://db.apache.org/derby/releases/release-10_17_1_0.cgi